--- a/src/nn_ansatz/systems_data.toml
+++ b/src/nn_ansatz/systems_data.toml
@@ -38,9 +38,11 @@ n_el = 6
 
 [LiSolid]
 periodic_boundaries = true
-real_basis = [[-0.5, 0.5, 0.5], [0.5, -0.5, 0.5], [0.5, 0.5, -0.5]]
-unit_cell_length = 7.407726
-r_atoms = [[0.25, 0.25, 0.25]]
+# real_basis = [[-0.5, 0.5, 0.5], [0.5, -0.5, 0.5], [0.5, 0.5, -0.5]]
+real_basis = [[1.0,  0.0,  0.0], [-0.33333335,  0.94280903,  0.0], [-0.33333335, -0.47140456,  0.81649655]]
+unit_cell_length = 5.608132296572055
+# r_atoms = [[0.5, 0.25, 0.25]]
+r_atoms = [[0.16666664, 0.23570224, 0.40824827]]
 z_atoms = [3.0]
 n_el_atoms = [3]
 n_el = 3
