--- a/src/nn_ansatz/systems_data.toml
+++ b/src/nn_ansatz/systems_data.toml
@@ -42,17 +42,13 @@ n_el_atoms = [10]
 n_el = 10
 
 [HEG]
-periodic_boundaries = true
+pbc = true
 real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
-spin_polarized = true
 
 [LiSolid]
-periodic_boundaries = true
-# real_basis = [[-0.5, 0.5, 0.5], [0.5, -0.5, 0.5], [0.5, 0.5, -0.5]]
+pbc = true
 real_basis = [[1.0,  0.0,  0.0], [-0.33333335,  0.94280903,  0.0], [-0.33333335, -0.47140456,  0.81649655]]
-unit_cell_length = 5.608132296572055
-# unit_cell_length = 2.9677114487  # Angstroms -> bohr is factro 1.8897161646320724
-# r_atoms = [[0.25, 0.25, 0.25]]
+scale_cell = 5.608132296572055
 r_atoms = [[0.16666664, 0.23570224, 0.40824827]]
 z_atoms = [3.0]
 n_el_atoms = [3]
@@ -60,19 +56,20 @@ n_el = 3
 
 
 [LiSolidBCC]
-periodic_boundaries = true
+pbc = true
 real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
-unit_cell_length = 6.63
-# unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
+scale_cell = 6.63
+atoms_from_unit_cell = true
 r_atoms = [[0.00, 0.00, 0.00], [0.5, 0.5, 0.5]]
 z_atoms = [3.0, 3.0]
 n_el_atoms = [3, 3]
 n_el = 6
 
 [LiSolidSingleAtom]
-periodic_boundaries = true
+pbc = true
+atoms_from_unit_cell = true
 real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
-unit_cell_length = 3.0
+scale_cell = 3.0
 # unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
 r_atoms = [[0.5, 0.5, 0.5]]
 z_atoms = [3.0]
@@ -80,9 +77,10 @@ n_el_atoms = [3]
 n_el = 3
 
 [HeSolid]
-periodic_boundaries = true
+pbc = true
+atoms_from_unit_cell = true
 real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
-unit_cell_length = 2.0
+scale_cell = 2.0
 # unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
 r_atoms = [[0.5, 0.5, 0.5]]
 z_atoms = [2.0]
@@ -90,9 +88,10 @@ n_el_atoms = [2]
 n_el = 2
 
 [HSolid]
-periodic_boundaries = true
+pbc = true
+atoms_from_unit_cell = true
 real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
-unit_cell_length = 1.0
+scale_cell = 1.0
 # unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
 r_atoms = [[0.5, 0.5, 0.5]]
 z_atoms = [1.0]
