--- a/src/nn_ansatz/systems_data.toml
+++ b/src/nn_ansatz/systems_data.toml
@@ -43,11 +43,11 @@ n_el = 10
 
 [HEG]
 pbc = true
-real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
+basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
 
 [LiSolid]
 pbc = true
-real_basis = [[1.0,  0.0,  0.0], [-0.33333335,  0.94280903,  0.0], [-0.33333335, -0.47140456,  0.81649655]]
+basis = [[1.0,  0.0,  0.0], [-0.33333335,  0.94280903,  0.0], [-0.33333335, -0.47140456,  0.81649655]]
 scale_cell = 5.608132296572055
 r_atoms = [[0.16666664, 0.23570224, 0.40824827]]
 z_atoms = [3.0]
@@ -57,7 +57,7 @@ n_el = 3
 
 [LiSolidBCC]
 pbc = true
-real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
+basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
 scale_cell = 6.63
 atoms_from_unit_cell = true
 r_atoms = [[0.00, 0.00, 0.00], [0.5, 0.5, 0.5]]
@@ -68,7 +68,7 @@ n_el = 6
 [LiSolidSingleAtom]
 pbc = true
 atoms_from_unit_cell = true
-real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
+basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
 scale_cell = 3.0
 # unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
 r_atoms = [[0.5, 0.5, 0.5]]
@@ -79,7 +79,7 @@ n_el = 3
 [HeSolid]
 pbc = true
 atoms_from_unit_cell = true
-real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
+basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
 scale_cell = 2.0
 # unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
 r_atoms = [[0.5, 0.5, 0.5]]
@@ -90,7 +90,7 @@ n_el = 2
 [HSolid]
 pbc = true
 atoms_from_unit_cell = true
-real_basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
+basis = [[1.0,  0.0,  0.0], [0.0, 1.0, 0.0], [0.0, 0.0, 1.0]]
 scale_cell = 1.0
 # unit_cell_length = 3.51  # Angstroms -> bohr is factro 1.8897161646320724
 r_atoms = [[0.5, 0.5, 0.5]]
